[package]
name = "mining-eligibility-proxy"
version = "3.0.6"
authors = ["Luke Schoen"]
edition = "2021"

[features]
default = ['std']
std = [
    'chrono/std',
    'codec/std',
    'scale-info/std',
    'log/std',
    'safe-mix/std',
    'module-primitives/std',
    'frame-support/std',
    'frame-system/std',
    'pallet-balances/std',
    'pallet-randomness-collective-flip/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-treasury/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',

    'account-set/std',
    'membership-supernodes/std',
]

[dependencies]
codec = { version = '2.3.1', package = 'parity-scale-codec', default-features = false, features = ['derive', 'max-encoded-len'] }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }
log = { version = '0.4.14', default-features = false }
safe-mix = { version = '1.0.0', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', rev = '8a3434bb5e8f204107644cd32f97f5ba76d8714f', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', rev = '8a3434bb5e8f204107644cd32f97f5ba76d8714f', default-features = false }
module-primitives = { version = '3.0.6', default-features = false, path = '../../../primitives' }
pallet-balances = { git = 'https://github.com/paritytech/substrate', rev = '8a3434bb5e8f204107644cd32f97f5ba76d8714f', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', rev = '8a3434bb5e8f204107644cd32f97f5ba76d8714f', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', rev = '8a3434bb5e8f204107644cd32f97f5ba76d8714f', default_features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', rev = '8a3434bb5e8f204107644cd32f97f5ba76d8714f', default-features = false }
pallet-treasury = { git = 'https://github.com/paritytech/substrate', rev = '8a3434bb5e8f204107644cd32f97f5ba76d8714f', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', rev = '8a3434bb5e8f204107644cd32f97f5ba76d8714f', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', rev = '8a3434bb5e8f204107644cd32f97f5ba76d8714f', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', rev = '8a3434bb5e8f204107644cd32f97f5ba76d8714f', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', rev = '8a3434bb5e8f204107644cd32f97f5ba76d8714f', default-features = false }
chrono = { version = '0.4.19', default_features = false }

account-set = { path = '../../../../traits/account-set', default-features = false }
membership-supernodes = { path = '../../../membership/supernodes', default-features = false }

[dev-dependencies]
